--- a/css/main.css
+++ b/css/main.css
@@ -803,3 +803,14 @@ section img.close {
     float: right;
     margin-right: 15%;
 }
+
+img.gray {
+    -webkit-filter : grayscale(100%);
+    -moz-filter    : grayscale(100%);
+    filter         : grayscale(100%);
+}
+
+.profile_pic img {
+    width: 281px;
+    height: 430px
+}
